index(메인) 페이지 수정
포트폴리오 2건의 연결 링크 추가함

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <div class="portfolio_top">
                             <div class="link_alert"><br> ※ 이미지 클릭 시 <br>     프로젝트 링크로 이동합니다.</div>
                             <div class="img_wrap">
-                                <a href="#" target="_blank">
+                                <a href="https://github.com/dohyun332/shoppingmall_project" target="_blank">
                                     <img class="pcweb" src="./img/pcweb1.png" alt="">
                                 </a>
                             </div>
@@ -243,7 +243,7 @@
                             <div class="portfolio_line"></div>
                         </div>
                         <div class="portfolio_bot">
-                            <div class="portfolio_title">1. 프로젝트 제목</div>
+                            <div class="portfolio_title">1. 프로젝트 개요(https://github.com/dohyun332/shoppingmall_project)</div>
                             <div class="portfolio_info">
                                 <div class="content_line"></div>
                                 <span class="portfolio_txt">팀프로젝트 / 스포츠웨어 쇼핑몰(젝시믹스) / 소요기간 7일</span>
@@ -280,14 +280,14 @@
                         <div class="portfolio_top">
                             <div class="link_alert"><br> ※ 이미지 클릭 시 <br>     프로젝트 링크로 이동합니다.</div>
                             <div class="img_wrap">
-                                <a href="#" target="_blank">
+                                <a href="https://github.com/dohyun332/Lamp_project" target="_blank">
                                     <img class="pcweb" src="./img/pcweb2.png" alt="">
                                 </a>
                             </div>
                             <div class="portfolio_line"></div>
                         </div>
                         <div class="portfolio_bot">
-                            <div class="portfolio_title">1. 프로젝트 제목</div>
+                            <div class="portfolio_title">1. 프로젝트 개요(https://github.com/dohyun332/Lamp_project)</div>
                             <div class="portfolio_info">
                                 <div class="content_line"></div>
                                 <span class="portfolio_txt">개인프로젝트 / 음악검색 사이트(램프) / 소요기간 9일</span>
