--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <div class="content">
                             <div class="content_line"></div>
                             <div class="content_txt">
-                                2023년 2월 (스마트웹&콘텐츠개발) 개발자 양성과정 수료<br>
+                                2023년 2월 KH정보교육원 (스마트웹&콘텐츠개발) 개발자 양성과정 수료<br>
                                 2012년 2월 청주대학교 전자공학과 졸업<br>
                                 2008년 2월 숙지고등학교 자연계열 졸업
                             </div>
