포트폴리오 일부 내용 추가

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                             <div class="portfolio_title">3. 역할</div>
                             <div class="portfolio_info">
                                 <div class="content_line"></div>
-                                <div class="portfolio_txt">풀스택 / 메인페이지 / 메인검색 / 음악차트 / 음악게시판 목록, 수정, 삭제, 대댓글 / 즐겨찾기 / 로그인 / 회원가입</div>
+                                <div class="portfolio_txt">풀스택 / 메인페이지 / 메인검색 / 음악차트 / 음악게시판 목록, 글쓰기, 수정, 삭제, 대댓글 / 즐겨찾기 / 로그인 / 회원가입</div>
                             </div>
                             <div class="portfolio_title">4. 설명</div>
                             <div class="portfolio_info">
