250221_이력수정정

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="title">
                         <div class="name">김도현</div>
-                        <div class="support">자바 백엔드 개발자<br>경기도 수원시 거주</div>
+                        <div class="support">자바 백엔드 개발자<br>경기도 의정부시 거주</div>
                     </div>
                     <ul class="aside_menu">
                         <li class="aside_menuli">HOME</li>
@@ -68,6 +68,18 @@
                     <div class="subtitle">About</div>
                     <div class="content_wrap">
                         <div class="contentBox">
+                            <span class="content_title">Career</span>
+                            <span class="content_subtitle">   경력</span>
+                            <div class="content">
+                                <div class="content_line"></div>
+                                <div class="content_txt">
+                                    2023년 2월 ~ 현재 (주)비즈아이솔루션 솔루션개발팀<br>
+                                    2014년 8월 ~ 2021년 4월 (주)우리별 과장<br>
+                                    2012년 2월 ~ 2014년 2월 해병대 예비역 대위 
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contentBox">
                             <span class="content_title">Education</span>
                             <span class="content_subtitle">   교육과정</span>
                             <div class="content">
@@ -76,17 +88,6 @@
                                     2023년 2월 KH정보교육원 (스마트웹&콘텐츠개발) 개발자 양성과정 수료<br>
                                     2012년 2월 청주대학교 전자공학과 졸업<br>
                                     2008년 2월 숙지고등학교 자연계열 졸업
-                                </div>
-                            </div>
-                        </div>
-                        <div class="contentBox">
-                            <span class="content_title">Career</span>
-                            <span class="content_subtitle">   경력</span>
-                            <div class="content">
-                                <div class="content_line"></div>
-                                <div class="content_txt">
-                                    2014년 8월 ~ 2021년 4월 (주)우리별 과장<br>
-                                    2012년 2월 ~ 2014년 2월 해병대 예비역 대위 
                                 </div>
                             </div>
                         </div>
@@ -120,6 +121,49 @@
                 </section>
 
                 <section id="skills" class="section">
+                    <div class="subtitle">Skills</div>
+                    <div class="content_wrap">
+                        <span class="content_title">Skills</span>
+                        <span class="content_subtitle">   사용언어</span>
+                        <table id="skillsTable">
+                            <colgroup>
+                            <col style="width:40%;">
+                            <col style="width:60%;">
+
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <td>Backend / FrontEnd</td>
+                                    <td class="skills_second_td">
+                                        ⦁ JAVA<br>
+                                        ⦁ Spring FrameWork, Gradle, Maven<br>
+                                        ⦁ Html, CSS, javascript, jQuery, React.js<br>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        Infrastructure &<br>
+                                        Database
+                                    </td>
+                                    <td class="skills_second_td">
+                                        ⦁ AWS, Linux<br>
+                                        ⦁ Oracle, MySQL, MSSQL, CUBRID<br>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Tools</td>
+                                    <td class="skills_second_td">
+                                        ⦁ Intellij, eclipse, VS Code<br>
+                                        ⦁ Git, Github, SVN<br>
+                                        ⦁ Jira, Confluence<br>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>   
+                    </div>
+                </section>
+
+                <!-- <section id="skills" class="section">
                     <div class="subtitle">Skills</div>
                     <div class="content_wrap">
                         <span class="content_title">Skills</span>
@@ -220,7 +264,7 @@
                             </tbody>
                         </table>   
                     </div>
-                </section>
+                </section> -->
 
                 <section id="portfolio1" class="section">
                     <div class="subtitle">Portfolio</div>
